--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ ul {
 .container {
     padding: 50px;
     padding-top: 60px;
+    padding-bottom: 0%;
 }
 
 .container-fluid {
@@ -54,7 +55,7 @@ ul {
     padding-right: 100px;
 }
 
-.prototypesection {
+.titlesection {
 display: flex;
 justify-content: center;
 }
