made top nav fixed to top when scrolling

--- a/style.css
+++ b/style.css
@@ -61,3 +61,11 @@ padding-top: 25px;
     padding-top: 10px;
     padding-bottom: 1px;
     }
+
+.navbar {
+        overflow: hidden;
+        background-color: #333B50;
+        position: fixed; /* Set the navbar to fixed position */
+        top: 0; /* Position the navbar at the top of the page */
+        width: 100%; /* Full width */
+      }
