--- a/style.css
+++ b/style.css
@@ -69,3 +69,24 @@ padding-top: 25px;
         top: 0; /* Position the navbar at the top of the page */
         width: 100%; /* Full width */
       }
+
+      #myButn {
+        display: auto; /* Hidden by default */
+        position: fixed; /* Fixed/sticky position */
+        bottom: 20px; /* Place the button at the bottom of the page */
+        right: 30px; /* Place the button 30px from the right */
+        z-index: 99; /* Make sure it does not overlap */
+        border-color: #02ac3b; /* Remove borders */
+        outline: none; /* Remove outline */
+        background-color: #313b57; /* Set a background color */
+        color: white; /* Text color */
+        cursor: pointer; /* Add a mouse pointer on hover */
+        padding: 15px; /* Some padding */
+        border-radius: 10px; /* Rounded corners */
+        font-size: 18px; /* Increase font size */
+    }
+    
+    #myButn:hover {
+        background-color: rgb(53, 69, 104); /* Add a dark-grey background on hover */
+    }
+    
