--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ padding-top: 25px;
       }
 
 #myBtn {
-        display: none; /* Hidden by default */
+        display: block; /* Hidden by default */
         position: fixed; /* Fixed/sticky position */
         bottom: 80px; /* Place the button at the bottom of the page */
         right: 40px; /* Place the button 30px from the right */
@@ -101,7 +101,5 @@ padding-top: 25px;
                 transform: scale(1, -1);
       }
     
-#myBtn:hover {
-        background-color: rgb(53, 69, 104); /* Add a dark-grey background on hover */
-    }
+
     
